<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/dimen_5_dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <ImageView
      android:id="@+id/deal_list_item_image_view"
      android:layout_margin="@dimen/dimen_5_dp"
      android:layout_width="@dimen/deal_list_item_image_size"
      android:layout_height="@dimen/deal_list_item_image_size"
      android:contentDescription="@string/app_name"
      />

  <TextView
      android:id="@+id/deal_list_item_title"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/dimen_5_dp"
      android:layout_marginBottom="@dimen/dimen_5_dp"
      android:layout_marginRight="@dimen/dimen_5_dp"
      android:layout_marginLeft="@dimen/dimen_5_dp"
      android:layout_toEndOf="@+id/deal_list_item_image_view"
       android:layout_height="wrap_content"
      android:textSize="@dimen/dimen_18_sp" />
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_margin="@dimen/dimen_5_dp"
      android:id="@+id/view_divider"
      android:layout_toEndOf="@+id/deal_list_item_image_view"
      android:layout_below="@+id/deal_list_item_title"
      android:background="@color/divider_color"/>

  <TextView
      android:id="@+id/deal_list_item_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:layout_marginLeft="@dimen/dimen_5_dp"
      android:layout_marginRight="@dimen/dimen_5_dp"
      android:layout_below="@+id/view_divider"
      android:layout_toEndOf="@id/deal_list_item_image_view"

      android:textSize="@dimen/dimen_18_sp" />

  <TextView
      android:id="@+id/deal_list_aisle"
      android:layout_width="@dimen/dimen_30_dp"
      android:layout_height="@dimen/dimen_30_dp"
      android:gravity="center"
      android:layout_below="@+id/view_divider"
      android:textColor="@color/aisle_txt_color"
      android:padding="@dimen/dimen_3_dp"
      android:layout_marginTop="@dimen/dimen_5_dp"
      android:layout_marginLeft="@dimen/dimen_5_dp"
      android:layout_marginRight="@dimen/dimen_5_dp"
      android:background="@drawable/aisle_tv_bg"
      android:textAllCaps="true"
      android:textStyle="bold"
      android:layout_alignParentEnd="true"
      android:textSize="@dimen/dimen_10_sp" />

  <TextView
      android:id="@+id/deal_list_ship_tct"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_5_dp"
      android:text="@string/ship"
      android:layout_below="@+id/view_divider"
      android:layout_toStartOf="@id/deal_list_or_txt"
       android:textSize="@dimen/dimen_16_sp" />
  <TextView
      android:id="@+id/deal_list_or_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dimen_5_dp"
      android:text="@string/or"
      android:layout_marginRight="@dimen/dimen_5_dp"
      android:layout_marginLeft="@dimen/dimen_5_dp"
      android:textColor="@color/or_txt_color"
      android:layout_below="@+id/view_divider"
      android:layout_toStartOf="@id/deal_list_aisle"
      android:textSize="@dimen/dimen_16_sp" />


</RelativeLayout>

