<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.DealItemFragment">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:id="@+id/footer_lay"
       android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:weightSum="2">

      <Button
          android:layout_width="0dp"
          android:layout_weight="1"
          android:textAllCaps="false"
          android:background="@color/add_to_list_bg"
          android:textColor="@color/add_to_list_txt_clr"
          android:id="@+id/add_to_list_btn"
          android:text="@string/add_to_list"

          android:layout_height="match_parent"/>
    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:background="@color/add_to_cart_bg"
        android:textColor="@color/add_to_cart_txt_clr"
        android:id="@+id/add_to_cart_btn"
        android:text="@string/add_to_cart"
        android:layout_height="match_parent"/>
  </LinearLayout>


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      android:fitsSystemWindows="true"

      android:layout_above="@+id/footer_lay">
  <LinearLayout
      android:layout_width="match_parent"
      android:orientation="vertical"
      android:layout_margin="@dimen/dimen_10_dp"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/product_image"
        android:layout_height="300dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

      <TextView
          android:layout_width="wrap_content"

          android:id="@+id/product_sale_price"
          android:gravity="center_vertical"

          android:textStyle="bold"
          android:textSize="@dimen/dimen_20_sp"
          android:textColor="@color/deal_price_detail_txtclr"
          android:layout_height="match_parent"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:text="@string/reg"
          android:gravity="center_vertical"
          android:id="@+id/reg_price_hint"

          android:layout_toStartOf="@+id/product_original_price"

 />
      <TextView
          android:layout_width="wrap_content"
          android:layout_alignParentEnd="true"
          android:gravity="center_vertical"
          android:id="@+id/product_original_price"

          android:layout_height="match_parent"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/product_title"
        android:textSize="@dimen/dimen_18_sp"
        android:layout_height="wrap_content"
          />
    <TextView
        android:layout_width="match_parent"
        android:id="@+id/product_desc"

        android:textSize="@dimen/dimen_16_sp"
        android:layout_marginTop="@dimen/dimen_10_dp"
        android:textColor="@color/gray_color"
        android:layout_marginBottom="@dimen/dimen_30_dp"
        android:layout_height="wrap_content"
          />
  </LinearLayout>

  </ScrollView>
</RelativeLayout>